jukebox/static/style.css
html,
body {
  margin: 0;
  height: 100%;
  overflow: hidden;
  font-family: system-ui, sans-serif;
}

.content {
  display: flex;
  height: calc(100vh - 64px);
}

.sidebar-left,
.sidebar-right {
  display: flex;
  flex-direction: column;
  width: 24vw;
  padding: 1em;
  gap: 1em;
}

.sidebar-title {
  align-self: center;
}

.now-playing {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1em;
  border-left: 2px solid;
  border-right: 2px solid;
}

#song-thumbnail {
  width: 80%;
  height: 80%;
  border-radius: 0.5em;
  object-fit: cover;
}

#default-thumbnail {
  width: 80%;
  height: 80%;
  border-radius: 0.5em;
  object-fit: scale-down;
}

.player-bar {
  outline: 2px solid;
  height: 64px;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 1.5em;
}

.player-left {
  display: flex;
  align-items: center;
  gap: 1.2em;
}

.player-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5em;
}

.player-right {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

.url-form {
  display: flex;
  gap: 0.5em;
  margin-top: 1em;
}

.url-form input {
  flex: 1;
  min-width: 0;
}

#queue {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  overflow-y: auto;
}

.queue-item {
  display: flex;
  align-items: center;
  gap: 0.5em;
  padding: 0.5em;
  outline: 1px solid;
}

.queue-info {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  overflow: hidden;
}

.queue-item img {
  width: 4em;
  height: 4em;
  object-fit: cover;
  border-radius: 0.25em;
}

#lyrics-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 1.5em;
  line-height: 1.2em;
  font-size: 1em;
  overflow-y: auto;
}

#active-lyric {
  font-weight: bold;
}

@media only screen and (max-width: 1024px) {
    .player-center {
        display: none;
    }
    .sidebar-left {
      display: none;
    }
    .sidebar-right {
      display: none;
    }
}

